syntax = "proto3";

package transport_serialize;

message Rgba{
    uint32 red = 1;
    uint32 green = 2;
    uint32 blue = 3;
    double opacity = 4;
    bool has_opacity = 5;
}  

message Color{
    oneof content {
        bool is_content = 1;
        string name = 2;
        Rgba rgba = 3;
    }
}
